2017-11-03  Ryan Haddad  <ryanhaddad@apple.com>

        Mark http/tests/security/mixedContent/insecure-css-with-secure-cookies.html as flaky.
        https://bugs.webkit.org/show_bug.cgi?id=175998

        Unreviewed test gardening.

        * platform/mac/TestExpectations:

2017-11-03  Ryan Haddad  <ryanhaddad@apple.com>

        Mark imported/w3c/web-platform-tests/service-workers/service-worker/fetch-event-within-sw.https.html as flaky.
        https://bugs.webkit.org/show_bug.cgi?id=179248

        Unreviewed test gardening.

        * TestExpectations:

2017-11-03  Alex Christensen  <achristensen@webkit.org>

        Remove Yosemite test expectations
        https://bugs.webkit.org/show_bug.cgi?id=179143

        Reviewed by Ryosuke Niwa.

        We only test back to El Capitan.  Everything is Yosemite+.  Marking tests as failing only on Yosemite isn't useful any more.

        * platform/mac-wk1/TestExpectations:
        * platform/mac-wk2/TestExpectations:
        * platform/mac/TestExpectations:

2017-11-03  Zan Dobersek  <zdobersek@igalia.com>

        Unreviewed GTK+ gardening. Mark a few failures, posting along the relevant
        bug entries. Add a platform-specific baseline for one HTTP test.

        * platform/gtk/TestExpectations:
        * platform/gtk/http/tests/security/module-no-mime-type-expected.txt: Added.

2017-11-03  Per Arne Vollan  <pvollan@apple.com>

        [Win] Update test expectations after r224324.

        Unreviewed test gardening.

        * platform/win/css3/selectors3/html/css3-modsel-166-expected.txt:
        * platform/win/css3/selectors3/html/css3-modsel-166a-expected.txt:
        * platform/win/css3/selectors3/html/css3-modsel-39-expected.txt:
        * platform/win/css3/selectors3/html/css3-modsel-39b-expected.txt:
        * platform/win/fast/css/first-letter-float-after-float-expected.txt:

2017-11-03  Matt Lewis  <jlewis3@apple.com>

        Marked js/intl-datetimeformat.html as failing on High Sierra.