@@ -12,14 +12,16 @@ if (window.testRunner) {
 }
 
 function firstFrameLoaded() {
-    if (window.testRunner) {
-        testRunner.setAuthenticationUsername("correctusername");
-        testRunner.setAuthenticationPassword("correctpassword");
-    }
-    var frame = document.createElement("iframe");
-    frame.setAttribute("src", "http://127.0.0.1:8000/loading/resources/test2/basic-auth-testing.php?username=correctusername&password=correctpassword");
-    frame.setAttribute("onload", "secondFrameLoaded()");
-    document.body.appendChild(frame);
+    setTimeout(()=>{
+        if (window.testRunner) {
+            testRunner.setAuthenticationUsername("correctusername");
+            testRunner.setAuthenticationPassword("correctpassword");
+        }
+        var frame = document.createElement("iframe");
+        frame.setAttribute("src", "http://127.0.0.1:8000/loading/resources/test2/basic-auth-testing.php?username=correctusername&password=correctpassword");
+        frame.setAttribute("onload", "secondFrameLoaded()");
+        document.body.appendChild(frame);
+    }, 0);
 }
 
 function secondFrameLoaded() {
