@@ -1,3 +1,14 @@
+2017-11-03  Alex Christensen  <achristensen@webkit.org>
+
+        LayoutTest http/tests/loading/basic-auth-resend-wrong-credentials.html is flaky on WK2
+        https://bugs.webkit.org/show_bug.cgi?id=159884
+
+        Reviewed by Darin Adler.
+
+        * http/tests/loading/basic-auth-resend-wrong-credentials-expected.txt:
+        * http/tests/loading/basic-auth-resend-wrong-credentials.html:
+        * platform/wk2/http/tests/loading/basic-auth-resend-wrong-credentials-expected.txt:
+
 2017-11-03  Ryan Haddad  <ryanhaddad@apple.com>
 
         Mark http/tests/security/mixedContent/insecure-css-with-secure-cookies.html as flaky.
